01-Interação de elementos Css

--- a/src/pages/index2.html
+++ b/src/pages/index2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="/src/css/style2.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
     <!-- Biblioteca de Emoticos -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
@@ -23,9 +23,9 @@
         <nav class="menu">
             <a href="" class="btn-close" onclick="btnClose()"><strong>x</strong></a>
             <ul>
-                <li> <a href="index2.html">PAGINA INICIAL</a></li>
-                <li> <a href="receitas.html">RECEITAS</a></li>
-                <li> <a href="cafeesaude.html">CAFE E SAÚDE</a></li>
+                <li> <a href="/src/pages/index2.html">PAGINA INICIAL</a></li>
+                <li> <a href="/src/pages/receitas.html">RECEITAS</a></li>
+                <li> <a href="/src/pages/cafeesaude.html">CAFE E SAÚDE</a></li>
                 <li> <a href="#contatoFundo">SOBRE</a></li>
             </ul>
 
@@ -93,7 +93,7 @@
 
         <article class="postagem">
 
-            <img src="/Capturar.PNG" alt="dat.png">
+            <img src="/src/imagens/Capturar.PNG" alt="dat.png">
             <p>
 
                 "Luke, meu filho, há muito que desejamos discutir nossos destinos e o futuro da galáxia. Apesar de
@@ -120,13 +120,13 @@
             <div class="footer-bottom">
                 <p style="text-align: center; color: aliceblue">&copy; 2024 AdamCyber. Todos os direitos reservados.</p>
                 <div class="LogoEmpres">
-                    <img class="LogoEmpresa" src="/imagens/LogoDaEmpresa.png" alt="imagem.png">
+                    <img class="LogoEmpresa" src="/src/imagens/LogoDaEmpresa.png" alt="imagem.png">
                 </div>
             </div>
             <p>----------------------------------------------------------------</p>
     </footer>
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
-    <script src="Versao02.js" defer></script>
+    <script src="/src/js/Versao02.js" defer></script>
 </body>
 
 </html>
