02- Correção da interação do texto-extra

--- a/src/pages/index2.html
+++ b/src/pages/index2.html
@@ -106,7 +106,7 @@
 
 
     </main>
-
+   
     <footer class="footer-contatos">
         <div class="social-media">
             <div class="icones">
@@ -116,7 +116,7 @@
                 <a href="#"><i class="fa-brands fa-twitter"></i></a>
                 <a href="#"><i class="fa-brands fa-linkedin"></i></a>
             </div>
-
+            <div id="contatoFundo">
             <div class="footer-bottom">
                 <p style="text-align: center; color: aliceblue">&copy; 2024 AdamCyber. Todos os direitos reservados.</p>
                 <div class="LogoEmpres">
@@ -125,6 +125,7 @@
             </div>
             <p>----------------------------------------------------------------</p>
     </footer>
+</div>
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <script src="/src/js/Versao02.js" defer></script>
 </body>
