--- a/index2.html
+++ b/index2.html
@@ -24,15 +24,14 @@
             <a href="" class="btn-close" onclick="btnClose()"><strong>x</strong></a>
             <ul>
                 <li> <a href="index2.html">PAGINA INICIAL</a></li>
-                <li> <a href="receitas.html">RECEITAS</a></li>
-                <li> <a href="cafeesaude.html">CAFE E SAÚDE</a></li>
-                <li> <a href="#contatoFundo">SOBRE</a></li>
+                <li> <a href="#">RECEITAS</a></li>
+                <li> <a href="#">CAFE E SAÚDE</a></li>
+                <li> <a href="#">SOBRE</a></li>
             </ul>
-
+    
         </nav>
-
     </header>
-
+  
 
     <main class="teste">
 
@@ -123,7 +122,7 @@
                     <img class="LogoEmpresa" src="/imagens/LogoDaEmpresa.png" alt="imagem.png">
                 </div>
             </div>
-            <p>----------------------------------------------------------------</p>
+     
     </footer>
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <script src="Versao02.js" defer></script>
