--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <nav class="menu">
             <a href="" class="btn-close" onclick="btnClose()"><strong>x</strong></a>
             <ul>
-                <li> <a href="index2.html">PAGINA INICIAL</a></li>
+                <li> <a href="index.html">PAGINA INICIAL</a></li>
                 <li> <a href="#">RECEITAS</a></li>
                 <li> <a href="#">CAFE E SAÚDE</a></li>
                 <li> <a href="#">SOBRE</a></li>
